<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="UserEntity"
            type="com.example.test.ui_models.UserDetailModel" />
        <import type="com.example.test.R"/>
    </data>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.HomeFragment">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/shape_gradient_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <include layout="@layout/toolbar_home"
                android:id="@+id/toolbar_layout"
                android:layout_width="0dp"
                android:layout_marginTop="14dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/dp_18"
                android:layout_marginEnd="@dimen/dp_18"/>

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/lo_action_panel"
                app:layout_constraintBottom_toBottomOf="@id/lo_action_panel"/>

            <View
                android:id="@+id/bottom_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/divider1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/shape_top_rounded"
                app:layout_constraintBottom_toBottomOf="parent" />

            <include layout="@layout/layout_action_panel"
                android:id="@+id/lo_action_panel"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                app:layout_constraintStart_toStartOf="@id/toolbar_layout"
                app:layout_constraintEnd_toEndOf="@id/toolbar_layout"
                app:layout_constraintTop_toBottomOf="@id/tv_balance"
                android:layout_marginTop="32dp"
                android:elevation="@dimen/dp_8"/>

            <TextView
                android:id="@+id/tv_av_bal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/light_purple"
                android:text="@string/available_balance"
                app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
                app:layout_constraintStart_toStartOf="@id/toolbar_layout"
                app:layout_constraintEnd_toEndOf="@id/toolbar_layout"/>

            <TextView
                android:id="@+id/tv_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                tools:text="$11,547.54"
                android:text="@{context.getString(R.string.balance, UserEntity.currencySymbol, UserEntity.accBalance)}"
                app:layout_constraintTop_toBottomOf="@id/tv_av_bal"
                app:layout_constraintStart_toStartOf="@id/toolbar_layout"
                app:layout_constraintEnd_toEndOf="@id/toolbar_layout"/>

            <TextView
                android:id="@+id/tv_pay_list_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/payment_list"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@id/lo_action_panel"
                app:layout_constraintStart_toStartOf="@id/toolbar_layout"/>

            <GridView
                android:id="@+id/gv_payment_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:numColumns="4"
                tools:visibility="gone"
                android:verticalSpacing="11dp"
                tools:listitem="@layout/item_payment_list"
                app:layout_constraintStart_toStartOf="@id/lo_action_panel"
                app:layout_constraintEnd_toEndOf="@id/lo_action_panel"
                app:layout_constraintTop_toBottomOf="@id/tv_pay_list_label"
                android:layout_marginTop="@dimen/dp_12"/>

            <TextView
                android:id="@+id/tv_promo_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/promo_and_discount"
                android:layout_marginTop="36dp"
                app:layout_constraintTop_toBottomOf="@id/gv_payment_list"
                app:layout_constraintStart_toStartOf="@id/toolbar_layout"/>

            <TextView
                android:id="@+id/tv_see_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/dark_purple_1"
                android:text="@string/see_more"
                app:layout_constraintTop_toTopOf="@id/tv_promo_label"
                app:layout_constraintStart_toEndOf="@id/tv_promo_label"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintBottom_toBottomOf="@id/tv_promo_label"
                app:layout_constraintEnd_toEndOf="@id/toolbar_layout"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_promo"
                    android:layout_width="0dp"
                    android:layout_height="172dp"
                    android:paddingStart="@dimen/dp_18"
                    android:paddingEnd="@dimen/dp_18"
                    android:clipToPadding="false"
                    app:layout_constraintTop_toBottomOf="@id/tv_see_more"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    android:paddingBottom="12dp"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_promo_discount"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
