<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="receipt"
            type="com.example.test.ui_models.ReceiptModel" />
        <import type="com.example.test.R"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/rounded_bg_white_no_border">
        <ImageView
            android:id="@+id/iv_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_success"
            app:imageResource="@{receipt.success ? R.drawable.ic_success: R.drawable.ic_success}"
            android:contentDescription="@{receipt.transTitle}"/>
        <TextView
            android:id="@+id/tv_trans_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{receipt.transTitle}"
            tools:text="Transfer Successful!"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_success"/>

        <TextView
            android:id="@+id/tv_trans_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{receipt.transDesc}"
            tools:text="Your money has been transfered\nsuccessfuly!"
            android:textColor="@color/white_gray"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="12sp"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/tv_trans_title"
            app:layout_constraintEnd_toEndOf="@id/tv_trans_title"
            app:layout_constraintTop_toBottomOf="@id/tv_trans_title"/>

        <View
            android:id="@+id/seperator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#D9D9D9"
            app:layout_constraintTop_toBottomOf="@id/tv_trans_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="18dp"/>

        <TextView
            android:id="@+id/tv_trans_amt_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer_amount"
            android:textColor="@color/white_gray"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="12sp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="@dimen/dp_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_trans_amt"
            app:layout_constraintTop_toBottomOf="@id/seperator"
            app:layout_constraintHorizontal_bias="0"/>

        <TextView
            android:id="@+id/tv_trans_amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{receipt.transAmt}"
            tools:text="$1500"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="12sp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/dp_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seperator"/>

        <include layout="@layout/layout_receipent_card"
            android:id="@+id/lo_receipent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_trans_amt_label"
            app:receipent="@{receipt.receipenttModel}"
            android:layout_marginTop="18dp"/>

        <TextView
            android:id="@+id/tv_datetime_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datetime"
            android:textColor="@color/white_gray"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="12sp"
            android:layout_marginTop="28dp"
            android:layout_marginStart="@dimen/dp_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_datetime"
            app:layout_constraintTop_toBottomOf="@id/lo_receipent"
            app:layout_constraintHorizontal_bias="0"/>

        <TextView
            android:id="@+id/tv_datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{receipt.dateTime}"
            tools:text="1 Jan 2023, 10:30PM"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="12sp"
            android:layout_marginTop="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/dp_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lo_receipent"/>

        <TextView
            android:id="@+id/tv_trans_ref_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trans_ref"
            android:textColor="@color/white_gray"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="12sp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="@dimen/dp_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_trans_ref"
            app:layout_constraintTop_toBottomOf="@id/tv_datetime_label"
            app:layout_constraintHorizontal_bias="0"/>

        <TextView
            android:id="@+id/tv_trans_ref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{receipt.transRef}"
            tools:text="11288889058722"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="12sp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/dp_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_datetime_label"/>

        <RelativeLayout
            android:id="@+id/lo_see_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="@dimen/dp_24"
            android:paddingBottom="@dimen/dp_24"
            android:paddingEnd="20dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/shape_bottom_rounded"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_trans_ref_label">
            <TextView
                android:id="@+id/tv_see_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_detail"
                tools:text="See Detail"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"/>
            
            <ImageView
                android:id="@+id/iv_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_down"
                android:layout_marginEnd="8dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
